--- a/microservice-vue/package.json
+++ b/microservice-vue/package.json
@@ -39,6 +39,7 @@
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.7",
     "babel-eslint": "^10.1.0",
+    "echarts": "^5.3.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "file-saver": "^2.0.5",
