--- a/microservice-functional/microservice-notification/pom.xml
+++ b/microservice-functional/microservice-notification/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>microservice-mobile-attendance</artifactId>
+    <artifactId>microservice-notification</artifactId>
     <packaging>jar</packaging>
 
     <properties>
@@ -27,6 +27,20 @@
             <groupId>com.aacoptics</groupId>
             <artifactId>microservice-common-feign</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>alibaba-dingtalk-service-sdk</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>21.1.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.javacrumbs.shedlock</groupId>
