--- a/microservice-base/microservice-common/microservice-common-feign/pom.xml
+++ b/microservice-base/microservice-common/microservice-common-feign/pom.xml
@@ -56,6 +56,11 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-okhttp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form</artifactId>
+            <version>3.8.0</version>
+        </dependency>
     </dependencies>
 
 </project>
