--- a/microservice-base/microservice-webapps/microservice-webapps-parent/pom.xml
+++ b/microservice-base/microservice-webapps/microservice-webapps-parent/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>microservice-webapps-parent</artifactId>
 
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <name>releases</name>
+            <url>http://10.233.32.11:30782/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <!-- web基础类库 -->
         <dependency>
@@ -25,5 +33,13 @@
             <version>1.0.0</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
